force-app/main/default/objects/Product_SubscriptionItem__c/Product_SubscriptionItem__c.object-meta.xml
<CustomObject>
    <label>Product_SubscriptionItem</label>
    <nameField>
        <displayFormat>PSI-{YYMMDD}-{0000}</displayFormat>
        <label>Product_SubscriptionItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product_SubscriptionItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>