force-app/main/default/objects/Product_SubscriptionItem__c/fields/AOL_Percentage__c.field-meta.xml
<CustomField>
    <fullName>AOL_Percentage__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Relevant in case the Item belongs to az AccountOpportunityLink kind of Deal</description>
    <inlineHelpText>Relevant in case the Item belongs to az AccountOpportunityLink kind of Deal</inlineHelpText>
    <label>AOL Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>