force-app/main/default/objects/Product_SubscriptionItem__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>calculated annual  Revenue 
TermNetValue__c * (365 / Day_Duration__c)</description>
    <formula>Net_Value__c * (365 / Day_Duration__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>