force-app/main/default/objects/Product_SubscriptionItem__c/fields/Creation_Type__c.field-meta.xml
<CustomField>
    <fullName>Creation_Type__c</fullName>
    <defaultValue>&quot;own-Deal&quot;</defaultValue>
    <description>help to difffentiate between own type or onbeha;f type (AOL)  Maybe other usage in the future</description>
    <inlineHelpText>help to difffentiate between own type or onbeha;f type (AOL)</inlineHelpText>
    <label>Creation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>on-Behalf</fullName>
            </value>
            <value>
                <fullName>own-Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>