force-app/main/default/objects/Product_SubscriptionItem__c/fields/Date_Interval__c.field-meta.xml
<CustomField>
    <fullName>Date_Interval__c</fullName>
    <formula>End_Date__c - Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Interval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>