force-app/main/default/objects/Product_SubscriptionItem__c/fields/Day_Duration__c.field-meta.xml
<CustomField>
    <fullName>Day_Duration__c</fullName>
    <formula>(End_Date__c - Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration(Day)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>