force-app/main/default/objects/Product_SubscriptionItem__c/fields/Deal_Currency__c.field-meta.xml
<CustomField>
    <fullName>Deal_Currency__c</fullName>
    <description>CurrencyIsoCode if the CPQ quote Line  record  currency</description>
    <label>Deal Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>