force-app/main/default/objects/Product_SubscriptionItem__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration(Month)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>