force-app/main/default/objects/Product_SubscriptionItem__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>match the CPQ QuoteLine ID for QLI_Base  items. for ConsolidatedItems it  has an index appended</description>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>