force-app/main/default/objects/Product_SubscriptionItem__c/fields/InitialTermDuration__c.field-meta.xml
<CustomField>
    <fullName>InitialTermDuration__c</fullName>
    <formula>OriginQuote_Line__r.SBQQ__EndDate__c - OriginQuote_Line__r.SBQQ__StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>