force-app/main/default/objects/Product_SubscriptionItem__c/fields/itemOrder__c.field-meta.xml
<CustomField>
    <fullName>itemOrder__c</fullName>
    <description>logical order of the items takign in consideration the Debook and Adjustments</description>
    <label>itemOrder</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>