force-app/main/default/objects/Product_SubscriptionItem__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <description>number of months the product line cover</description>
    <label>Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>