force-app/main/default/objects/Product_SubscriptionItem__c/fields/MRR__c.field-meta.xml
<CustomField>
    <fullName>MRR__c</fullName>
    <description>Calculated Monhtly revenue
TermNetValue__c * 30.45 / Day_Duration__c</description>
    <formula>Net_Value__c  * 30.45 / Day_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>