force-app/main/default/objects/Product_SubscriptionItem__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <description>filed populated only for Consolidated items</description>
    <label>Net Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>