force-app/main/default/objects/Product_SubscriptionItem__c/fields/NetTotal_Rounded__c.field-meta.xml
<CustomField>
    <fullName>NetTotal_Rounded__c</fullName>
    <formula>OriginQuote_Line__r.Net_Total_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>NO LONGER USED.</inlineHelpText>
    <label>NetTotal(R)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>