force-app/main/default/objects/Product_SubscriptionItem__c/fields/NumberofPSTerm__c.field-meta.xml
<CustomField>
    <fullName>NumberofPSTerm__c</fullName>
    <formula>Parent_PS__r.Number_of_Terms__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NumberofPSTerm</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>