force-app/main/default/objects/Product_SubscriptionItem__c/fields/Opp_Type__c.field-meta.xml
<CustomField>
    <fullName>Opp_Type__c</fullName>
    <formula>IF
(
 RecordType.DeveloperName = &quot;QLI_Based&quot;
,TEXT(OriginOpportunity__r.Type) 
,&#39;Conolidated&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Type</label>
    <type>Text</type>
</CustomField>