force-app/main/default/objects/Product_SubscriptionItem__c/fields/OppCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>OppCreatedDate__c</fullName>
    <description>why is not a Formula? I  need its  value before creation</description>
    <label>OppCreatedDate</label>
    <type>DateTime</type>
</CustomField>