force-app/main/default/objects/Product_SubscriptionItem__c/fields/OppType__c.field-meta.xml
<CustomField>
    <fullName>OppType__c</fullName>
    <description>Oportunity type  as (NewLogo/Renewal/Upsell/...)</description>
    <label>OppType</label>
    <length>25</length>
    <type>Text</type>
</CustomField>