force-app/main/default/objects/Product_SubscriptionItem__c/fields/OriginOpportunity__c.field-meta.xml
<CustomField>
    <fullName>OriginOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Product_SubscriptionItems</relationshipLabel>
    <relationshipName>Product_SubscriptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>