force-app/main/default/objects/Product_SubscriptionItem__c/fields/OriginQuote_Line__c.field-meta.xml
<CustomField>
    <fullName>OriginQuote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OriginQuote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Product_SubscriptionItems</relationshipLabel>
    <relationshipName>Product_SubscriptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>