force-app/main/default/objects/Product_SubscriptionItem__c/fields/OriginQuoteItem__c.field-meta.xml
<CustomField>
    <fullName>OriginQuoteItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Product_SubscriptionItems</relationshipLabel>
    <relationshipName>Product_SubscriptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>