force-app/main/default/objects/Product_SubscriptionItem__c/fields/Parent_PS__c.field-meta.xml
<CustomField>
    <fullName>Parent_PS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent ProdSubs</label>
    <referenceTo>ProductSubscription__c</referenceTo>
    <relationshipLabel>Product_SubscriptionItems</relationshipLabel>
    <relationshipName>Product_SubscriptionItems</relationshipName>
    <type>Lookup</type>
</CustomField>