force-app/main/default/objects/Product_SubscriptionItem__c/fields/ParentAccountID__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountID__c</fullName>
    <description>used for on-Behalf  Deals  to store the Salesforce ID  of the Accout  who  own the Opportunity (needed by consodation)</description>
    <inlineHelpText>used for on-Behalf  Deals  to store the Salesforce ID  of the Accout  who  own the Opportunity</inlineHelpText>
    <label>ParentAccountID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>