force-app/main/default/objects/Product_SubscriptionItem__c/fields/ParentSubscription__c.field-meta.xml
<CustomField>
    <fullName>ParentSubscription__c</fullName>
    <label>ParentSubscription</label>
    <referenceTo>ProductSubscription_POC__c</referenceTo>
    <relationshipLabel>Product_SubscriptionItems</relationshipLabel>
    <relationshipName>Product_SubscriptionItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>