force-app/main/default/objects/Product_SubscriptionItem__c/fields/QuoteItem_NetTotal__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_NetTotal__c</fullName>
    <description>value of the CQP QuoteLine Item (not AAR)</description>
    <formula>OriginQuote_Line__r.Net_Total_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>inherintig initial CPQ QLI  Net_Total_Rounded__c (reflect my currency at record creation-date rate)</inlineHelpText>
    <label>QuoteItem_NetTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>