force-app/main/default/objects/Product_SubscriptionItem__c/fields/QuoteItem_Value__c.field-meta.xml
<CustomField>
    <fullName>QuoteItem_Value__c</fullName>
    <description>filled based on the Original QuoteLine Item NetTotal_Rounded__c</description>
    <inlineHelpText>Initialy folow  the CPQ Item Value.  Value will be Equal with the Value in the deal&#39;s Currency.                             Adjusted during Consolidation</inlineHelpText>
    <label>QuoteItem_Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>