force-app/main/default/objects/Product_SubscriptionItem__c/fields/SubscriptionTermStatus__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTermStatus__c</fullName>
    <formula>IF(RecordType.Name = &#39;QLI_Based&#39;,
&#39;N/A&#39;,
IF(Start_Date__c &lt;= Today() &amp;&amp; End_Date__c &gt;= Today(), &quot;Current&quot;,
   IF(Start_Date__c &gt; Today(), &quot;Future&quot;,
      IF(End_Date__c &lt; Today(), &quot;Past&quot;,
      NULL)
     )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Term Status</label>
    <type>Text</type>
</CustomField>