force-app/main/default/objects/Product_SubscriptionItem__c/fields/TermNetValue__c.field-meta.xml
<CustomField>
    <fullName>TermNetValue__c</fullName>
    <description>truncated or  Contingent full term NetValues. Will be the source for ARR/MMR  
ORIGINAL
QuoteItem_NetTotal__c * ( Day_Duration__c /  InitialTermDuration__c )</description>
    <formula>QuoteItem_NetTotal__c * ( Day_Duration__c /  InitialTermDuration__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated field based on QuoteItem_NetTotal field&#39;s value</inlineHelpText>
    <label>TermNetValue(TSV)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>