force-app/main/default/objects/Product_SubscriptionItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>ConsolidationType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CONTINGENT</fullName>
            </value>
            <value>
                <fullName>DEBOOKED</fullName>
            </value>
            <value>
                <fullName>OVERLAP</fullName>
            </value>
            <value>
                <fullName>AMMENDED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>