force-app/main/default/objects/Product_SubscriptionItem__c/fields/YearIndex__c.field-meta.xml
<CustomField>
    <fullName>YearIndex__c</fullName>
    <description>inherit SBQQ__SegmentIndex__c  from Original QuoteLineItem</description>
    <label>YearIndex</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>