force-app/main/default/objects/Product_SubscriptionItem__c/recordTypes/Consolidated.recordType-meta.xml
<RecordType>
    <fullName>Consolidated</fullName>
    <active>true</active>
    <description>record type  of a consolidated Subscription item</description>
    <label>Consolidated</label>
</RecordType>