force-app/main/default/objects/Product_SubscriptionItem__c/recordTypes/QLI_Based.recordType-meta.xml
<RecordType>
    <fullName>QLI_Based</fullName>
    <active>true</active>
    <description>reflect the Quote Line Item</description>
    <label>QLI Based</label>
</RecordType>